# PROG2100_Student_Information_System

./: CMakeLists.txt  README.md
StudentInfoSystem/: Menu.h  Start.h  Student.cpp  Student.h  StudentRegistry.cpp  StudentRegistry.h  ValidateInput.h  main.cpp
